# mmd-tst-variable-selection-word-sense-change-analysis

./: .gitignore  README.md  interface.py  interface_mmd_distance_analysis.py  pyproject.toml
configs/: coha.toml  mainichi_corpus.toml
word_sense_change_analysis/: get_stats.py  gpu_manager.py  mmd_distance_analysis.py  preprocessing.py  visualisation_header.py  visualisations.py
word_sense_change_analysis/select_word_period_pair/: select_word_period_pair_coha.py  select_word_period_pair_mainichi.py
