[tool.poetry]
name = "mmd-tst-variable-selection-word-sense-change-analysis"
version = "0.1"
description = ""
authors = ["Kensuke-Mitsuzawa <kensuke.mit@gmail.com>"]
readme = "README.md"
packages = [
    {include = "word_sense_change_analysis"}
]


[tool.poetry.dependencies]
python = "^3.9"

numpy = "^1.24.2"
torch = "2.0.0"
scikit-learn = "*"

joblib = "*"
jupyter = "^1.0.0"
seaborn = "*"
uniplot = "*"
bokeh = {version = "2.4.2", optional = true}  # need for dask dashboard

mlflow = {version = "^2.7.1"}
plotly = "^5.18.0"

logzero = "*"
dacite = "^1.8.1"

# package only for experimental
more-itertools = "*"
future = {version = "*", optional = true}

xarray = "^2024.1.1"
pandera = "^0.18.3"
toml = "^0.10.2"
openpyxl = "^3.1.5"

mmd-tst-variable-detector = {git = "https://github.com/Kensuke-Mitsuzawa/mmd-two-sample-test-variable-selection.git@1.3"}
papermill = "^2.6.0"
japanize-matplotlib = "^1.1.3"
tslearn = "^0.6.3"
gputil = "^1.4.0"



[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-resource-path = "^1.3.0"
python-dotenv = "*"
pytest-parallel = "*"
sphinx = "*"
myst-parser = "*"
sphinx_rtd_theme = "*"
papermill = "*"


[tool.poetry.scripts]

[tool.poetry.extras]
dask_visual = ["bokeh"]
experiment_compare = ["future"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"

[build-system]
requires = ["setuptools", "poetry", "poetry_core>=1.0", "cython"]
build-backend = "poetry.core.masonry.api"